%%{init: {
  "theme": "base",
  "themeVariables": {
    "primaryColor": "#eef6ff",
    "primaryTextColor": "#102a43",
    "primaryBorderColor": "#2f6f9f",
    "lineColor": "#486581",
    "secondaryColor": "#f4f7fa",
    "tertiaryColor": "#ffffff",
    "fontFamily": "Arial, sans-serif",
    "fontSize": "16px"
  },
  "htmlLabels": false,
  "er": {
    "useMaxWidth": false,
    "minEntityWidth": 220,
    "minEntityHeight": 70,
    "entityPadding": 18,
    "fontSize": 16
  },
  "layout": "elk"
}}%%
erDiagram
    USERS {
        bigint id PK
        string email UK
        string role
    }

    GUEST_ACCOUNTS {
        bigint id PK
        string email UK
    }

    FLOORS {
        bigint id PK
        string name
    }

    ROOM_TYPES {
        bigint id PK
        string name
        decimal base_rate
        enum room_sharing_type
    }

    ROOMS {
        bigint id PK
        bigint room_type_id FK
        bigint floor_id FK
        string room_number UK
        int capacity
        enum status
    }

    AMENITIES {
        bigint id PK
        string name
    }

    AMENITY_ROOM_TYPE {
        bigint id PK
        bigint amenity_id FK
        bigint room_type_id FK
    }

    RESERVATIONS {
        bigint id PK
        bigint guest_account_id FK
        bigint preferred_room_type_id FK
        bigint billing_guest_id FK
        bigint reviewed_by FK
        date check_in_date
        date check_out_date
        enum status
    }

    GUESTS {
        bigint id PK
        bigint reservation_id FK
    }

    RESERVATION_ROOM_REQUESTS {
        bigint id PK
        bigint reservation_id FK
        bigint room_type_id FK
        json requested_room_ids
        int requested_room_count
    }

    RESERVATION_ALTERNATIVE_OFFERS {
        bigint id PK
        bigint reservation_id FK
        bigint reservation_room_request_id FK
        bigint offered_room_type_id FK
        bigint proposed_by FK
        json room_ids
    }

    ROOM_HOLDS {
        bigint id PK
        bigint reservation_id FK
        bigint room_id FK
    }

    ROOM_ASSIGNMENTS {
        bigint id PK
        bigint reservation_id FK
        bigint guest_id FK
        bigint room_id FK
        bigint assigned_by FK
        bigint checked_in_by FK
        bigint checked_out_by FK
    }

    CHECK_IN_SNAPSHOTS {
        bigint id PK
        bigint reservation_id FK
        bigint guest_id FK
        bigint captured_by FK
    }

    RESERVATION_CHARGES {
        bigint id PK
        bigint reservation_id FK
        bigint created_by FK
    }

    RESERVATION_PAYMENTS {
        bigint id PK
        bigint reservation_id FK
        bigint received_by FK
    }

    RESERVATION_FEEDBACK {
        bigint id PK
        bigint reservation_id FK
        bigint guest_account_id FK
        bigint reviewed_by FK
    }

    RESERVATION_LOGS {
        bigint id PK
        bigint reservation_id FK
        bigint actor_id
    }

    FLOORS ||--o{ ROOMS : contains
    ROOM_TYPES ||--o{ ROOMS : classifies

    AMENITIES ||--o{ AMENITY_ROOM_TYPE : has
    ROOM_TYPES ||--o{ AMENITY_ROOM_TYPE : includes

    GUEST_ACCOUNTS o|--o{ RESERVATIONS : owns
    ROOM_TYPES o|--o{ RESERVATIONS : preferred_for
    USERS o|--o{ RESERVATIONS : reviews
    GUESTS o|--o{ RESERVATIONS : bills

    RESERVATIONS ||--o{ GUESTS : includes
    RESERVATIONS ||--o{ RESERVATION_ROOM_REQUESTS : requests
    ROOM_TYPES ||--o{ RESERVATION_ROOM_REQUESTS : requested_as

    RESERVATIONS ||--o{ RESERVATION_ALTERNATIVE_OFFERS : receives
    RESERVATION_ROOM_REQUESTS o|--o{ RESERVATION_ALTERNATIVE_OFFERS : relates_to
    ROOM_TYPES ||--o{ RESERVATION_ALTERNATIVE_OFFERS : offered_as
    USERS o|--o{ RESERVATION_ALTERNATIVE_OFFERS : proposes

    RESERVATIONS ||--o{ ROOM_HOLDS : holds
    ROOMS ||--o{ ROOM_HOLDS : is_held

    RESERVATIONS ||--o{ ROOM_ASSIGNMENTS : assigns
    GUESTS o|--o{ ROOM_ASSIGNMENTS : occupies
    ROOMS ||--o{ ROOM_ASSIGNMENTS : assigned_to
    USERS ||--o{ ROOM_ASSIGNMENTS : assigns
    USERS o|--o{ ROOM_ASSIGNMENTS : checks_in
    USERS o|--o{ ROOM_ASSIGNMENTS : checks_out

    RESERVATIONS ||--o{ CHECK_IN_SNAPSHOTS : snapshots
    GUESTS o|--o{ CHECK_IN_SNAPSHOTS : captured_for
    USERS o|--o{ CHECK_IN_SNAPSHOTS : captures

    RESERVATIONS ||--o{ RESERVATION_CHARGES : accrues
    USERS o|--o{ RESERVATION_CHARGES : creates

    RESERVATIONS ||--o{ RESERVATION_PAYMENTS : receives
    USERS o|--o{ RESERVATION_PAYMENTS : processes

    RESERVATIONS ||--o| RESERVATION_FEEDBACK : has
    GUEST_ACCOUNTS ||--o{ RESERVATION_FEEDBACK : submits
    USERS o|--o{ RESERVATION_FEEDBACK : reviews

    RESERVATIONS ||--o{ RESERVATION_LOGS : records
